Add packages for compiling aosp
Change-Id: I6a3b6541410721711f3da9c19683648d65af006c

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       args:
         username: ${USERNAME}
         password: ${PASSWORD}
+        timezone: ${TIMEZONE}
     image: goldenriver/nebula_dev
     volumes:
       - "./user_home:/home/${USERNAME}"
