--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the nebula branch
-  push:
-    branches: [ nebula ]
+  #push:
+  #  branches: [ nebula ]
   pull_request:
     branches: [ nebula ]
 
